<resources>
    <string name="app_name">Light On/Off</string>
    <string name="off">OFF</string>
    <string name="off1">OFF</string>
    <string name="on">ON</string>
    <string name="on1">ON</string>
    <string name="ls">Light switch</string>
    <string name="d">Default</string>
    <string name="toff1">OFF</string>
    <string name="toff2">OFF</string>
    <string name="contents">Contents</string>
    <string name="about">About</string>
    <string name="ip">Set IP</string>
    <string name="LightRoom1">Light Room 1</string>
    <string name="LightRoom2">Light Room 2</string>
    <string name="edit">Edit On</string>
    <string name="editoff">Edit Off</string>
</resources>
