<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.myth.lighton.MainActivity"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:text="@string/ls"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        tools:text="Light switch"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView3"
        android:layout_marginStart="0dp"/>

    <Button
        android:text="@string/off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:onClick="offM1"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginStart="0dp"/>

    <Button
        android:text="@string/off1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:onClick="offM2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView4"
        android:layout_marginStart="0dp"/>

    <TextView
        android:text="@string/d"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        tools:text="Default"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="32dp"/>

    <TextView
        android:text="@string/toff2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        tools:text="OFF"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/button"
        android:layout_marginStart="0dp"/>

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:onClick="onM2"
        android:text="@string/on1"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        app:layout_constraintBaseline_toBaselineOf="@+id/button3"
        app:layout_constraintLeft_toRightOf="@+id/button3"
        android:layout_marginStart="16dp"/>

    <TextView
        android:text="@string/toff1"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        tools:text="OFF"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_width="wrap_content"
        android:layout_marginLeft="0dp"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:layout_marginStart="0dp"/>

    <Button
        android:text="@string/on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:onClick="onM1"
        app:layout_constraintBaseline_toBaselineOf="@+id/button"
        app:layout_constraintLeft_toRightOf="@+id/button"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"/>
</android.support.constraint.ConstraintLayout>
